# DreamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DreamEngine.sln  README.md
.github/: cmake.yml
.github/workflows/: cmake.yml
DreamEngine/: CMakeLists.txt  DreamEngine.vcxproj  DreamEngine.vcxproj.filters  application.cpp  application.h  application.hpp  log.hpp
DreamEngine/buffers/: buffer.cpp  buffer.h  buffer.hpp  index_buffer.cpp  index_buffer.hpp  index_bufffer.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
DreamEngine/buffers/renderer/: index_buffer.hpp  index_bufffer.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
DreamEngine/camera/: camera.cpp  camera.hpp
DreamEngine/core/: Application.cpp  Application.h  application.cpp  application.h
DreamEngine/core/buffers/: Buffer.h  IndexBuffer.h  VertexArray.h  buffer.cpp  buffer.h  index_buffer.cpp  vertex_array.cpp  vertex_array.h
DreamEngine/core/events/: Event.h  KeyEvent.h  MouseEvent.h  event.h  key_event.h  mouse_event.h
DreamEngine/core/input/: Input.cpp  MouseCodes.h  input.cpp  input.h  input_manager.h  key_codes.h
DreamEngine/core/scene/: Camera.cpp  Camera.h  Group.h  Label.cpp  Label.h  Layer.cpp  Layer.h  Renderable.h  Renderer2D.cpp  Renderer2D.h  Texture2D.h  camera.cpp  camera.h  entity.h  group.cpp  group.h  label.cpp  label.h  layer.cpp  layer.h  renderer2D.cpp  renderer2D.h  shader.cpp  shader.h  texture2D.cpp  texture2D.h
DreamEngine/core/utils/: file_utils.h
DreamEngine/core/window/: Window.cpp  Window.h  window.cpp  window.h
DreamEngine/ec/: component_array.hpp  ec_manager.hpp  entity.hpp  entity_manager.hpp  signature.hpp
DreamEngine/ec/components/: rigid_body.hpp  transform.hpp
DreamEngine/ecs/: ComponentArray.hpp  component_array.hpp  component_manager.hpp  ecs_manager.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  signature.hpp  system.hpp  system_manager.hpp
DreamEngine/ecs/systems/: physics_system.cpp  physics_system.hpp
DreamEngine/events/: event.h  event.hpp  event_dispatcher.cpp  event_dispatcher.hpp  key_event.h  mouse_event.h
DreamEngine/game/: Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  main.cpp
DreamEngine/input/: input.cpp  input.h  input_manager.cpp
DreamEngine/physics/: physics_engine2D.cpp  physics_engine2D.hpp
DreamEngine/renderer/: renderer2D.cpp  renderer2D.hpp
DreamEngine/renderer/resources/: shader.cpp  shader.hpp  texture2D.cpp  texture2D.hpp
DreamEngine/renderer/text/: font_manager.hpp  label.cpp  label.hpp  texture_label.cpp  texture_label.hpp
DreamEngine/scene/: camera.cpp  camera.h  camera.hpp  font_manager.cpp  font_manager.h  font_manager.hpp  group.cpp  group.h  label.cpp  label.h  label.hpp  layer.cpp  layer.hpp  renderer2D.cpp  renderer2D.h  renderer2D.hpp  scene_object.h  scene_object.hpp  shader.cpp  shader.h  shader.hpp  texture2D.h  texture_label.cpp
DreamEngine/src/: Application.cpp  Application.h  main.cpp
DreamEngine/src/core/: Application.cpp  Application.h  application.cpp  application.h
DreamEngine/src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderable.h  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  buffer.cpp  buffer.h  indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h
DreamEngine/src/graphics/buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h
DreamEngine/src/graphics/layers/: Group.cpp  Group.h  Layer.cpp  Layer.h  TileLayer.cpp  TileLayer.h
DreamEngine/src/graphics/renderer/: Renderer2D.cpp  Renderer2D.h  VertexArray.h
DreamEngine/src/graphics/scene/: Renderable.h  Renderer2D.cpp  Renderer2D.h  Shader.h
DreamEngine/src/graphics/scene/layers/: Group.h  Layer.cpp  Layer.h
DreamEngine/src/input/: KeyInput.cpp  KeyInput.h  input.cpp  input.h  keyInput.cpp  keyInput.h
DreamEngine/src/input/events/: event.h  keyEvent.h  windowEvent.h
DreamEngine/src/input/inputCodes/: KeyCodes.h  keyCodes.h
DreamEngine/src/shaders/: fragment.shader  vertex.shader
DreamEngine/src/utils/: FileUtils.h  fileUtils.h
DreamEngine/src/widow/: window.cpp  window.h
DreamEngine/src/window/: Window.cpp  window.cpp  window.h
DreamEngine/utils/: file_utils.hpp  metric_utils.hpp
DreamEngine/window/: window.cpp  window.h  window.hpp
DreamTest/: CMakeLists.txt  DreamTest.vcxproj  DreamTest.vcxproj.filters
DreamTest/demo_game/: bullet_hell_game.cpp  bullet_hell_game.hpp  main.cpp
DreamTest/demo_game/entities/: player.hpp
DreamTest/demo_game/layers/: game_layer.cpp  game_layer.hpp
DreamTest/game/: Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  TestLevel.cpp  TestLevel.h  bullet_hell.cpp  bullet_hell.hpp  game_layer.cpp  game_layer.h  game_layer.hpp  main.cpp  test_level.cpp  test_level.h
DreamTest/game/entities/: player.h  player.hpp
DreamTest/game/layers/: game_layer.cpp  game_layer.hpp
DreamTest/shaders/: fragment.shader
